@startuml
' ERD Wallet-Service
entity "Wallet" as wallet {
  id : UUID [PK] NOT NULL
  user_id : BIGINT NOT NULL
  balance : DECIMAL(15,2) NOT NULL
  created_at : TIMESTAMP NOT NULL
  updated_at : TIMESTAMP NOT NULL
}

entity "StockPosition" as sp {
  id : UUID [PK] NOT NULL
  wallet_id : UUID [FK] NOT NULL
  symbol : VARCHAR(16) NOT NULL
  quantity : INTEGER NOT NULL
  average_price : DECIMAL(15,4) NOT NULL
  created_at : TIMESTAMP NOT NULL
  updated_at : TIMESTAMP NOT NULL
}

entity "Transaction" as tx {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT NOT NULL
  wallet_id : UUID [FK] NOT NULL
  idempotency_key : VARCHAR(255)
  amount : DECIMAL(15,2) NOT NULL
  type : VARCHAR(50) NOT NULL
  status : VARCHAR(50) NOT NULL
  description : TEXT
  created_at : TIMESTAMP NOT NULL
  updated_at : TIMESTAMP NOT NULL
}

entity "WalletAudit" as waudit {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT NOT NULL
  details : TEXT NOT NULL
  created_at : TIMESTAMP NOT NULL
}

wallet ||--o{ sp : "possède"
wallet ||--o{ tx : "effectue"
wallet ||--o{ waudit : "est journalisé"
@enduml
